--- a/POCs/static/src/main/resources/static/index.html
+++ b/POCs/static/src/main/resources/static/index.html
@@ -7,7 +7,8 @@
 <body>
 <h1>Page 1</h1>
 <div class="button">
-    <a href="https://login.eveonline.com/v2/oauth/authorize/?response_type=code&client_id=eacaa9cd36594189877544d851753734&state=state&redirect_uri=http%3A%2F%2Flocalhost%3A8091%2Fui%2FloginValidation&scope=esi-assets.read_assets.v1">LOGIN</a>
+    <a href="https://login.eveonline.com/v2/oauth/authorize/?response_type=code&client_id=eacaa9cd36594189877544d851753734&state=state&redirect_uri=http%3A%2F%2Fneocominfinity.poc%2Fui%2FloginValidation&scope=esi-assets.read_assets.v1">LOGIN</a>
+    <a href="https://login.eveonline.com/v2/oauth/authorize/?response_type=code&client_id=98eb8d31c5d24649ba4f7eb015596fbd&state=state&redirect_uri=http%3A%2F%2Fneocominfinity.herokuapp.com%2Fui%2FloginValidation&scope=esi-assets.read_assets.v1">LOGIN HEROKU</a>
 </div>
 </body>
 </html>
