-[POC.SERVER] Fixed express configuration to serve angular application. Failed the page redirection internal to the Angular app.
Former-commit-id: 3a354fefbe3824db74851a4f942952c7b68ae7f0

--- a/POCs/server/public/home.html
+++ b/POCs/server/public/home.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Home Page - Start login</title>
+        <title>Home Page - Start login - Home</title>
     </head>
     <body>
         <h1>NEOCOM</h1>
