--- a/POCs/server/public/index.html
+++ b/POCs/server/public/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Home Page - Start login</title>
+        <title>Home Page - Start login - Index</title>
     </head>
     <body>
         <h1>NEOCOM</h1>
