-[POC.STATIC] Application integration working with login authentication.
Former-commit-id: 1bf05a0937e813f6d957c4f756b3dee5d1aeec0d

--- a/POCs/server/public/home.html
+++ b/POCs/server/public/home.html
@@ -5,6 +5,6 @@
     <body>
         <h1>NEOCOM</h1>
         <h2>v0.16.0.POC</h2>
-        <p><a href="">LOGIN POC LOCAL</a></p>
+        <p><a href="https://login.eveonline.com/v2/oauth/authorize/?response_type=code&client_id=eacaa9cd36594189877544d851753734&state=state&redirect_uri=http%3A%2F%2Fneocominfinity.poc%2Fui%2FloginValidation&scope=esi-assets.read_assets.v1">LOGIN POC LOCAL</a></p>
     </body>
 </html>
